<?xml version="1.0"?>
<package>
  <name>object_slam</name>
  <version>0.0.0</version>
  <description>object_slam</description>

  <maintainer email="gaoyongbin@sues.edu.cn">gaoyongbin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>line_lbd</build_depend>
  <build_depend>detect_3d_cuboid</build_depend>
  <build_depend>tictoc_profiler</build_depend>
  <build_depend>pop_up_wall</build_depend>
  <build_depend>yolact_tool</build_depend>
  
  <run_depend>roscpp</run_depend> 
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>  
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>line_lbd</run_depend>
  <run_depend>detect_3d_cuboid</run_depend>
  <run_depend>tictoc_profiler</run_depend>
  <run_depend>pop_up_wall</run_depend>
  <run_depend>yolact_tool</run_depend>

</package>
